--- a/ReactCode/index.html
+++ b/ReactCode/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="src/assets/headLogo.png" />
+    <link rel="icon" type="image" href="https://res.cloudinary.com/dgtwxbofy/image/upload/v1745839326/ChatGPT_Image_28_apr_2025_13_22_00_qpvete.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DroneHub</title>
   </head>
